Acrylic: Fix for readability of icons in address bar

--- a/css/themes_and_colors/acrylic.css
+++ b/css/themes_and_colors/acrylic.css
@@ -47,6 +47,13 @@
   background:  var(--colorBgAlphaHeavy) !important;
   background-color:  var(--colorBgAlphaHeavy) !important;
 }
+.toolbar-addressbar, .toolbar-mainbar {
+  color: var(--colorFg) !important;
+}
+.toolbar-mainbar .button-toolbar > button:hover,
+.toolbar-mainbar .button-toolbar > button:active {
+  background-color: var(--colorBgDarker) !important;
+}
 .vivaldi-tree, .panel > header {
   background-color: var(--colorBgAlpha) !important;
 }
